# openai-rust

./: .gitignore  Cargo.toml  README.md  changelog.txt
examples/: chat_example.rs  chat_stream_example.rs
src/: chat.rs  completions.rs  edits.rs  embeddings.rs  images.rs  lib.rs
tests/: test.rs
