[package]
name = "openai-rust2"
version = "1.7.1"
edition = "2021"
authors = ["gubatron","LevitatingBusinessMan"]
description = "An unofficial library for the OpenAI API"
repository = "https://github.com/cloudllm-ai/openai-rust"
keywords = ["openai", "gpt", "library", "api", "async"]
documentation = "https://docs.rs/openai-rust"
categories = ["api-bindings"]
readme = "README.md"
license = "MIT"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[[example]]
name = "chat"
path = "examples/chat_example.rs"
doc-scrape-examples = true

[[example]]
name = "chat_stream"
path = "examples/chat_stream_example.rs"

[dependencies]
anyhow = "1.0.98"
bytes = "1.4.0"
#futures-core = "0.3.29"
futures-util = "0.3.27"
lazy_static = "1.4.0"
reqwest = { features = ["json", "stream"], version = "0.12.12"}
serde = {features = ["derive"], version = "1.0.218"}
serde_json = "1.0.94"
base64 = "0.22.1"

[dev-dependencies]
tokio = { features = ["macros", "rt-multi-thread"], version = "1.43.0"}
tokio-test = "0.4"
